# pixelbot

./: .gitignore  .pre-commit-config.yaml  README.md  config.json.example  pyproject.toml  requirements.txt
pixelbot/: __main__.py  app.py  config.py  utils.py
pixelbot/services/: base.py  calendar.py  manager.py
pixelbot/ui/: controls.py  fonts.py  renderer.py
pixelbot/ui/backends/skia/: Image.py  box.py  context.py  drawable.py  hbox.py  renderer_skia.py  static_text.py  vbox.py
pixelbot/widgets/: base.py  calendar.py  clock.py  color.py  controls.py  fonts.py  hello_world.py  loader.py  renderer.py
src/pixelbot/: __main__.py  config.py  utils.py
src/pixelbot/services/: manager.py
src/pixelbot/ui/: alignment.py  color.py  controls.py
src/pixelbot/ui/backends/skia/: box.py  context.py  renderer_skia.py  spacer.py  static_text.py
src/pixelbot/widgets/: calendar.py  clock.py  hello_world.py
tests/pixelbot/ui/: alignment_test.py
