[tool.poetry]
name = "pixelbot"
version = "0.1.0"
description = "A configurable display"
authors = ["Amitosh Swain Mahapatra <amitosh.swain@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
skia-python = "^87.6"
pyopengl = "^3.1.7"
babel = "^2.15.0"
requests = "^2.32.3"
icalendar = "^5.0.13"
glfw = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"
